tests/paczka1/small_fuzzy/58707825.err
Error in line 7: yF6BjDnCf3a A677 27,0
Error in line 11: TSmyW A373 96,1
Error in line 14: TSmyW S806 68,8
Error in line 15: TSmyW A373 93,8
